// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserCard expandLess 1`] = `
<div>
  <button
    aria-haspopup="true"
    class="makeStyles-card-1"
    data-testid="user-menu"
    type="button"
  >
    <div
      class="makeStyles-container-8"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circle makeStyles-picture-9 makeStyles-picture-11 makeStyles-avatar-6 MuiAvatar-colorDefault"
        data-testid="user-avatar"
      >
        T
      </div>
    </div>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
      />
    </svg>
  </button>
</div>
`;

exports[`UserCard expandMore 1`] = `
<div>
  <button
    aria-controls="menu-list-grow"
    aria-haspopup="true"
    class="makeStyles-card-12"
    data-testid="user-menu"
    type="button"
  >
    <div
      class="makeStyles-container-19"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circle makeStyles-picture-20 makeStyles-picture-22 makeStyles-avatar-17 MuiAvatar-colorDefault"
        data-testid="user-avatar"
      >
        T
      </div>
    </div>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
      />
    </svg>
  </button>
</div>
`;

exports[`UserCard no viewer 1`] = `<div />`;
